[project]
name = "yticker"
description = "A Python package for connecting to yahoo websocket."
authors = [{name = "Tapan Hazarika", email = "tapanhaz@gmail.com"}]
requires-python = '>=3.8'
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
keywords = ["yahoo", "websocket"]
dependencies = ["picows", "pyrobuf", "orjson"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython"
]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pyrobuf", "orjson", "picows"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = "cp36-* cp37-* pp*"
test-skip = ""
free-threaded-support = false

archs = ["auto"]
build-frontend = "default"
dependency-versions = "pinned"
build-verbosity = 0

before-all = ""
before-build = ""
repair-wheel-command = ""

container-engine = "docker"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]

[tool.cibuildwheel.pyodide]

[project.urls]
Homepage = "https://github.com/Tapanhaz/yticker"
Repository = "https://github.com/Tapanhaz/yticker"
Issues = "https://github.com/Tapanhaz/yticker/issues"

[tool.setuptools]
packages = ["yticker"]

[tool.setuptools.dynamic]
version = {attr = "yticker.__version__"}